[package]
name = "advent_of_code_2020"
version = "0.1.0"
authors = ["Aidiakapi <aidiakapi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = "0.5"
ascii = "1.0"
lazy_static = "1.4"
nom = "6.0"
num-traits = "0.2"

[dependencies.framework]
path = "./framework"

[workspace]
members = [
    "framework",
]
