[package]
name = "framework"
version = "0.1.0"
authors = ["Aidiakapi <aidiakapi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = "0.5"
ascii = "1.0"
itertools = "0.9"
nom = "6.0"
num-traits = "0.2"
paste = "1.0"
thiserror = "1.0"
ureq = "1.5"